public/css/style.css
/* ... */
.app-table__sortable .app-icon {
  vertical-align: middle;
}

.app-table__sortable:after {
  content: '';
  display: inline-block;
  position: relative;
  margin-left: 4px;
  border-style: solid;
}

.app-table__sortable--down:after {
  border-color: transparent transparent rgba(0,0,0,.54) transparent;
  border-width: 0 5px 5px 5px;
}

.app-table__sortable--up:after {
  border-color: rgba(0,0,0,.54) transparent transparent transparent;
  border-width: 5px 5px 0 5px;
}

.app-table__user {
  max-width: 150px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.app-table__avatar {
  margin-right: 8px;
  width: 40px;
  height: 40px;
  border-radius: 50%;
}

.app-table__icon-ranking {
  color: rgba(0,0,0,.54);
  position: relative;
  top: 3px;
  font-size: 18px;
}

.app-table__color {
  line-height: 0;
}

.app-table__color:after {
  content: '';
  display: inline-block;
  width: 20px;
  height: 20px;
  border: 2px solid #dadede;
  background: linear-gradient(to right, #fff 0%, #fff 50%, #000 50%, #000 100%);
  border-radius: 50%;
}

.app-table__color--white:after {
  background: #fff;
}

.app-table__color--black:after {
  background: #000;
}

.app-table__rank {
  width: 50px;
}

.app-table--ranking {
  width: 100%;
  border: none;
}

.app-table--ranking tbody tr {
  cursor: pointer;
}

.app-table--ranking tbody tr.is-user {
  background-color: #795548;
  color: #fff;
}

.app-table--ranking tbody tr td {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.app-table--ranking .app-table__rank {
  max-width: 150px;
}

.app-table--ranking .app-table__points {
  max-width: 100px;
}

.app-pagination {
  width: 100%;
  text-align: center;
}

.app-pagination--fixed {
  display: none;
}

.app-pagination__content {
  padding: 8px;
  text-align: right;
}

.app-pagination__form {
  display: inline-block;
  margin-right: 8px;
}

.app-pagination__prev {
  margin-right: 8px;
}

.app-pagination__count {
  font-size: 16px;
}

.app-pagination__textfield {
  display: inline-block;
  vertical-align: middle;
  height: 29px;
  padding-bottom: 3px;
  padding-top: 0;
  margin-bottom: 0;
}

.app-pagination__textfield > input {
  width: 50px;
  text-align: right;
  height: 100%;
}

.app-trophy__title {
  margin: 0;
  text-shadow: 0px 1px 1px rgba(0,0,0,.2);
  color: #795548;
}

.app-trophy__picture {
  position: relative;
}

.app-trophy__progress-value {
  color: #795548;
  position: absolute;
  top: 38px;
  width: 100%;
  text-align: center;
}

.app-trophy__desc {
  margin-bottom: 0;
}

.app-trophy__title,
.app-trophy__desc {
  white-space: pre-wrap;
  white-space: -moz-pre-wrap;
  white-space: -pre-wrap;
  white-space: -o-pre-wrap;
  word-wrap: break-word;
}

.app-trophy--page {
  cursor: pointer;
  padding: 8px;
}

.app-trophy--page .app-trophy__picture {
  float: left;
  width: 96px;
  height: 96px;
}

.app-trophy--page .app-trophy__picture img {
  width: 100%;
  height: 100%;
}

.app-trophy--page .app-trophy__progress-value {
  top: 38px;
  font-size: 20px;
}

.app-trophy--page .app-trophy__desc {
  font-size: 15px;
  line-height: 20px;
  margin-bottom: 0;
}

.app-trophy--page .app-trophy__content {
  margin-left: 108px;
}

.app-trophy--page .app-trophy__title {
  font-size: 24px;
  line-height: 24px;
  margin: 0 0 12px;
}

.app-trophy--modal {
  cursor: auto;
  text-align: center;
  margin-bottom: 24px;
}

.app-trophy--modal .app-trophy__picture {
  display: inline-block;
  float: none;
  margin-bottom: 16px;
  width: 200px;
  height: 200px;
}

.app-trophy--modal .app-trophy__picture img {
  width: 164px;
  height: 164px;
  padding: 16px;
}

.app-trophy--modal .app-trophy__progress-bar {
  display:  block;
  padding: 16px;
}

.app-trophy--modal .app-trophy__progress-value {
  font-size: 32px;
  top: 90px;
}

.app-trophy--modal .app-trophy__title {
  font-size: 36px;
  margin: 0;
}

.app-trophy--modal  .app-trophy__desc {
  font-size: 24px;
}

.ui-draggable {
    cursor: move;
}

.ui-draggable-disabled {
    cursor: auto;
}

.app-loading {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 10;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: #fff;
}

.app-loader {
    width: 50vw;
    max-width: 260px;
    text-align: center;
    opacity: 0.7;
}

.app-button__fixed {
  position: fixed;
  display: block;
  width: 56px;
  right: 36px;
  bottom: 36px;
  z-index: 9;
}

.app-button__fixed--mobile {
  display: none;
}

.app-button__fixed.app-button__fixed--game {
  bottom: 52px;
}

.app-button__fixed.app-button__fixed--action {
  right: 104px;
}

.app-button__fixed--more:hover,
.app-button__fixed--more.is-active {
  height: 328px;
}

.app-button__fixed--more .app-button {
  position: absolute;
  display: none;
}

.app-button__fixed--more:hover .app-button,
.app-button__fixed--more.is-active .app-button {
  display: initial;
}

.app-button__fixed--more .app-button:nth-of-type(2) {
  bottom: 68px;
}

.app-button__fixed--more .app-button:nth-of-type(3) {
  bottom: 136px;
}

.app-button__fixed--more .app-button:nth-of-type(4) {
  bottom: 204px;
}

.app-button__fixed--more .app-button:nth-of-type(5) {
  bottom: 272px;
}

.app-button__fixed--more .app-button:nth-of-type(6) {
  bottom: 340px;
}

.app-button__fixed--more .app-button:nth-of-type(7) {
  bottom: 408px;
}

.app-button__fixed--more .app-button:nth-of-type(8) {
  bottom: 476px;
}

.app-button__fixed--more .app-button.app-button--show {
  display: initial;
  bottom: 0;
}

.app-button__fixed--more:hover .app-button.app-button--show,
.app-button__fixed--more.is-active .app-button.app-button--show {
  display: none;
}
/* ... */

